--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
     border: solid #BDBDBD 1px;
     text-decoration: none;
     background: #FFFFFF;
-    width: auto;
+    width: 150px;
     margin: auto;
     -webkit-transition-duration: 0.4s; /* Safari */
     transition-duration: 0.4s;
@@ -17,12 +17,46 @@
     text-decoration: none;
 }
 
+.nav_link {
+    font-family: Georgia;
+    color: #757575;
+    font-size: 16px;
+    text-decoration: none;
+    -webkit-transition-duration: 0.4s; /* Safari */
+    transition-duration: 0.4s;
+}
+
+.nav_link:hover {
+    text-decoration: none;
+    text-decoration-color: #546E7A;
+    text-shadow: 0px 0px 10px #ECEFF1;
+}
+
+.col-center {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.fixed {
+    position: fixed;
+    width: 25%;
+}
+
 #name {
     font-family: Georgia;
     color: #757575;
     font-size: 56px;
     text-align: center;
     padding: 56px 10px;
+}
+
+#photography-nav {
+    padding: 30px 0px 0px 0px;
+}
+
+.group {
+    display: inline;
 }
 
 section {
@@ -36,4 +70,59 @@ section {
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+/* sidebar */
+.bs-docs-sidebar {
+    padding-left: 20px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+/* all links */
+.bs-docs-sidebar .nav>li>a {
+    color: #999;
+    border-left: 2px solid transparent;
+    padding: 4px 20px;
+    font-size: 13px;
+    font-weight: 400;
+}
+
+/* nested links */
+.bs-docs-sidebar .nav .nav>li>a {
+    padding-top: 1px;
+    padding-bottom: 1px;
+    padding-left: 30px;
+    font-size: 12px;
+}
+
+/* active & hover links */
+.bs-docs-sidebar .nav>.active>a, 
+.bs-docs-sidebar .nav>li>a:hover, 
+.bs-docs-sidebar .nav>li>a:focus {
+    color: #563d7c;                 
+    text-decoration: none;          
+    background-color: transparent;  
+    border-left-color: #563d7c; 
+}
+/* all active links */
+.bs-docs-sidebar .nav>.active>a, 
+.bs-docs-sidebar .nav>.active:hover>a,
+.bs-docs-sidebar .nav>.active:focus>a {
+    font-weight: 700;
+}
+/* nested active links */
+.bs-docs-sidebar .nav .nav>.active>a, 
+.bs-docs-sidebar .nav .nav>.active:hover>a,
+.bs-docs-sidebar .nav .nav>.active:focus>a {
+    font-weight: 500;
+}
+
+/* hide inactive nested list */
+.bs-docs-sidebar .nav ul.nav {
+    display: none;           
+}
+/* show active nested list */
+.bs-docs-sidebar .nav>.active>ul.nav {
+    display: block;           
 }
