--- a/css/style.css
+++ b/css/style.css
@@ -43,6 +43,15 @@
     width: 25%;
 }
 
+body {
+    position: relative;
+}
+
+.project-descriptions {
+    min-height: 100%;
+    min-height: 100vh;
+}
+
 #name {
     font-family: Georgia;
     color: #757575;
