Fixed carousel problem for photography page

--- a/css/carousel.css
+++ b/css/carousel.css
@@ -3,7 +3,7 @@
 -------------------------------------------------- */
 
 /* Carousel base class */
-.carousel, .slick-carousel {
+.carousel{
     min-height: 100%;  /* Fallback for browsers do NOT support vh unit */
     min-height: 50vh; /* These two lines are counted as one :-)       */
     max-height: 50vh;
@@ -17,7 +17,7 @@
 }
 
 /* Declare heights because of positioning of img element */
-.carousel .item, .item {
+.carousel .item {
     height: 50vh;
     background-color: #ffffff;
 }
@@ -26,10 +26,9 @@
     max-width: 75vh;
 }
 
-
 .carousel-inner > .item > img {
     max-width: 100%;
-    max-height: 500px;
+    max-height: 100%;
     margin: auto;
     position: absolute;
     top: 50%;
