--- a/css/style.css
+++ b/css/style.css
@@ -47,6 +47,11 @@ body {
     position: relative;
 }
 
+* {
+    font-family: Georgia;
+    color: #757575;
+}
+
 .project-descriptions {
     min-height: 100%;
     min-height: 100vh;
@@ -109,10 +114,9 @@ section {
 .bs-docs-sidebar .nav>.active>a, 
 .bs-docs-sidebar .nav>li>a:hover, 
 .bs-docs-sidebar .nav>li>a:focus {
-    color: #563d7c;                 
+    color: #616161;                 
     text-decoration: none;          
-    background-color: transparent;  
-    border-left-color: #563d7c; 
+    background-color: transparent;
 }
 /* all active links */
 .bs-docs-sidebar .nav>.active>a, 
